<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">DuckDuckGo Search App</string>
    <string name="search_hint">Search</string>
    <string name="search_bar_transition_name">search_bar</string>
    <string name="search_history">Search history</string>
    <string name="search_history_empty">No search history yet</string>
    <string name="search_history_disabled">Search history disabled</string>
    <string name="search_history_min">History</string>

    <string name="internet_error">Check your internet connection</string>
    <string name="internet_error_retry_button">Reload</string>

    <string name="time_calculation_few_moments">Few moments ago</string>
    <string name="time_calculation_minutes">%d min. ago</string>
    <string name="time_calculation_hour">%d hour ago</string>
    <string name="time_calculation_hours">%d hours ago</string>
    <string name="time_calculation_yesterday">Yesterday</string>
    <string name="time_calculation_past_days">%d days ago</string>
    <string name="last_month">Last month</string>
    <string name="past_months">%d months ago</string>
    <string name="last_year">Last year</string>
    <string name="past_years">%d years ago</string>

    <string name="add_widget">Add widget</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_theme_title">Select search theme</string>
    <string-array name="settings_theme_entries" tools:ignore="InconsistentArrays">
        <item>Default (Light)</item>
        <item>Basic (Light)</item>
        <item>Gray (Light)</item>
        <item>Dark</item>
        <item>Set by battery saver</item>
    </string-array>
    <string-array name="settings_theme_values" tools:ignore="InconsistentArrays">
        <item>default</item>
        <item>basic</item>
        <item>gray</item>
        <item>dark</item>
        <item>battery</item>
    </string-array>

    <string name="settings_search_history_title">Search history</string>
    <string name="settings_search_history_summary">Choose to enable search history or not</string>

    <string name="settings_search_widget_theme_title">Search widget theme</string>
    <string name="settings_search_widget_theme_summary">Select search widget theme</string>
    <string-array name="settings_search_widget_theme_entries">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="settings_search_widget_theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string name="settings_safe_search_title">Safe search</string>
    <string name="settings_safe_search_summary">Select safe search level</string>
    <string-array name="settings_safe_search_entries">
        <item>Off</item>
        <item>Moderate</item>
        <item>Strict</item>
    </string-array>
    <string-array name="settings_safe_search_values">
        <item>off</item>
        <item>moderate</item>
        <item>strict</item>
    </string-array>

    <string name="settings_delete_search_history_title">Delete search history</string>
    <string name="settings_delete_search_history_success">Successfully deleted</string>
    <string name="settings_delete_search_history_already_done">Already deleted history</string>
    <string name="settings_delete_search_history_dialog_title">Are you sure ?</string>
    <string name="settings_delete_search_history_dialog_message">Your history will be deleted. This action cannot be undone</string>
    <string name="settings_delete_search_history_dialog_positive_btn">Yes</string>
    <string name="settings_delete_search_history_dialog_negative_btn">Cancel</string>

    <string name="settings_about">About</string>
    <string name="settings_about_version">Version: %s</string>
    <string name="settings_about_disclaimer">Disclaimer :</string>
    <string name="settings_about_disclaimer_message">This is an UNOFFICIAL client for DuckDuckGo Search Engine and has no relation with DuckDuckGo company.</string>

</resources>
