<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/duck_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_duckduckgo_logo"
            android:layout_marginBottom="15dp"/>

        <RelativeLayout
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_field_bg">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:focusable="false"
                android:hint="@string/search_hint"
                android:inputType="text" />

        </RelativeLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:layout_margin="15dp"
        app:srcCompat="@drawable/ic_settings_24px" />

    <LinearLayout
        android:id="@+id/search_history_button"
        android:background="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/search_history_button_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_outline_keyboard_arrow_up_24px" />

        <TextView
            android:id="@+id/search_history_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history_min" />

    </LinearLayout>

</RelativeLayout>